RESOLVED FIXED89415
[JSC] In JSGlobalData.cpp, enableAssembler() sometimes leaks two CF objects
https://bugs.webkit.org/show_bug.cgi?id=89415
Summary [JSC] In JSGlobalData.cpp, enableAssembler() sometimes leaks two CF objects
Andy Estes
Reported 2012-06-18 20:16:50 PDT
[JSC] In JSGlobalData.cpp, enableAssembler() sometimes leaks two CF objects
Attachments
Patch (2.26 KB, patch)
2012-06-18 20:21 PDT, Andy Estes
sam: review+
Andy Estes
Comment 1 2012-06-18 20:21:37 PDT
Andy Estes
Comment 2 2012-06-18 20:32:45 PDT
Note You need to log in before you can comment on or make changes to this bug.