[JSC] In JSGlobalData.cpp, enableAssembler() sometimes leaks two CF objects https://bugs.webkit.org/show_bug.cgi?id=89415

Reviewed by Sam Weinig.

In the case where canUseJIT was a non-NULL CFBooleanRef,
enableAssembler() would leak both canUseJITKey and canUseJIT by
returning before calling CFRelease. Fix this by using RetainPtr.

* runtime/JSGlobalData.cpp:
(JSC::enableAssembler):

Canonical link: https://commits.webkit.org/107273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120663 268f45cc-cd09-0410-ab3c-d52691b4dbfc